// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.34
  </h1>
</div>
`;

exports[`render summary with expenses 1`] = `
<div>
  <h1>
    Viewing 
    21
     
    expenses
     totalling 
    $234,892.34
  </h1>
</div>
`;
